<resources>
    <string name="app_name">Walk Walk  Revolution</string>
    <string name="walkTitle">Walk</string>
    <string name="homeTitle">Home</string>
    <string name="home">Home</string>
    <string name="walk">Walk</string>
    <string name="route">Route</string>
    <string name="today_s_stats">Today\'s Stats</string>
    <string name="steps_title">Steps: </string>
    <string name="default_zero">0</string>
    <string name="distance">Distance: </string>
    <string name="showTimeLabel">Time: </string>
    <string name="estimates">Estimates:</string>
...
    <string name="welcome_msg">Welcome to WWR!</string>
    <string name="hint_first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height">Height</string>
    <string name="feet_text">FT</string>
    <string name="inch_text">Inch</string>
    <string name="get_started_msg">Get Started</string>
    <string name="first_name_qry">First Name:</string>
    <string name="update_steps">Update Steps</string>
    <string name="default_zero_miles">0 Miles</string>
    <string name="default_zero_steps">0 Steps</string>
    <string name="start_walk_btn">START WALK</string>
    <string name="add_route_btn_text">ADD ROUTE</string>
    <string name="boost_steps_btn_text">Boost Steps</string>
    <string name="milesStr">Miles</string>
    <string name="feetStr">Feet</string>
    <string name="space"> </string>
    <string name="plus">+</string>
    <string name="teamStr">Team</string>
...
    <string name="enter_route_name">Enter Route Name</string>
    <string name="submitRoute">Submit Route info</string>
    <string name="enter_cross_streets">Enter Start Location</string>
    <string name="enter_cross_street1">Cross Street 1</string>
    <string name="enter_cross_street2">Cross Street 2</string>
    <string name="enter_notes">Notes (optional)</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="route_name">Route Name</string>
    <string name="start_position">Start Position</string>
    <string name="new_route_text">New Route</string>
    <string name="notes_label">Notes</string>
    <string name="route_summary_title">This is a new route!</string>
...
