...
            android:fontFamily="@font/lato"
            android:text="@string/steps_title"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/homeDailyStepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/default_zero_steps"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
...
