<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/routeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/lato"
        android:text="@string/route"
        android:textColor="@color/colorText"
        android:textSize="45sp" />

    <ScrollView
        android:id="@+id/scrl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/routesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/routeContain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/teamRouteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/lato"
        android:text="Team Routes"
        android:textColor="@color/colorText"
        android:textSize="45sp" />

    <ScrollView
        android:id="@+id/scrl2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/teamRoutesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/teamrouteContain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/addRouteBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="320dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginStart="5sp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/colorAccent"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_route_btn_text"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_navigation_menu" />

    </FrameLayout>


</LinearLayout>
