...
                    android:fontFamily="@font/lato"
                    android:text="@string/route_name"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/routeName"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:hint="@string/route_name"
                    android:inputType="text"
                    android:background="@color/white"
...
                    android:fontFamily="@font/lato"
                    android:text="@string/start_position"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/routeStart"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:hint="@string/start_position"
                    android:inputType="text"
                    android:background="@color/white"
...
                    android:backgroundTint="@color/stop"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


                <Button
                    android:id="@+id/submitBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded"
...
